--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 baseurl: '/coding_notes'
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: America/Edmonton
 
 google_analytics:
   id: ''          # Fill with your Google Analytics ID
