--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -1,3 +1,6 @@
 -
   filename: 'Session-2'
   lastmod: '2020-08-19 09:38:56 -0600'
+-
+  filename: 'conv-git'
+  lastmod: '2020-08-19 19:08:56 -0600'
