--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -4,3 +4,6 @@
 -
   filename: 'conv-git'
   lastmod: '2020-08-19 19:08:56 -0600'
+-
+  filename: 'Assignment-3'
+  lastmod: '2020-08-20 15:17:30 -0600'
